# code-mesh

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLI_TEST_REPORT.md  CODE_MESH_IMPLEMENTATION_OVERVIEW.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  EPIC-code-mesh-port.md  EPIC_COMPLETION_REPORT.md  MILESTONES.md  Makefile  OAUTH_DEMO.md  PERSISTENT_STORAGE_COMPLETE.md  PROJECT_SUMMARY.md  PROVIDER_REGISTRY_COMPLETE.md  README-old.md  README.md  deny.toml  package.json  run-npm-cli.sh  system_integration_analysis.md  tarpaulin.toml  test_oauth.sh  test_stored_credentials.sh  testing_strategy.md
.github/: dependabot.yml
.github/workflows/: ci.yml  comprehensive-test.yml  performance.yml  protect-main.yml  security.yml  tests.yml
.hive-mind/: hive.db-shm  hive.db-wal
.hive-mind/sessions/: session-1752624681347-1whvhq3aq-auto-save-1752624711349.json
.swarm/: memory.db-shm  memory.db-wal
crates/code-mesh-cli/: Cargo.toml  README.md
crates/code-mesh-cli/src/: main.rs
crates/code-mesh-cli/src/cmd/: auth.rs  config.rs  error.rs  init.rs  mod.rs  models.rs  oauth.rs  run.rs  serve.rs  status.rs  ui.rs  utils.rs
crates/code-mesh-cli/tests/common/: mod.rs
crates/code-mesh-cli/tests/integration/: cli_commands.rs
crates/code-mesh-core/: Cargo.toml  README.md
crates/code-mesh-core/benches/: integration_benchmarks.rs  llm_benchmarks.rs  memory_benchmarks.rs  mod.rs  performance_benchmarks.rs  tool_benchmarks.rs
crates/code-mesh-core/src/: config.rs  error.rs  events.rs  features.rs  lib.rs  permission.rs  prompts.rs  sync.rs  utils.rs
crates/code-mesh-core/src/agent/: mod.rs
crates/code-mesh-core/src/auth/: anthropic.rs  github_copilot.rs  manager.rs  mod.rs  storage.rs
crates/code-mesh-core/src/llm/: anthropic.rs  anthropic_test.rs  example_usage.rs  github_copilot.rs  mod.rs  model.rs  openai.rs  provider.rs  registry.rs
crates/code-mesh-core/src/memory/: mod.rs
crates/code-mesh-core/src/performance/: async_optimizer.rs  cache.rs  memory_pool.rs  metrics.rs  mod.rs  monitor.rs  optimizer.rs  profiler.rs
crates/code-mesh-core/src/planner/: mod.rs
crates/code-mesh-core/src/session/: manager.rs  mod.rs
crates/code-mesh-core/src/storage/: file.rs  mod.rs
crates/code-mesh-core/src/tool/: audit.rs  bash.rs  edit.rs  file_watcher.rs  glob.rs  grep.rs  http.rs  mod.rs  multiedit.rs  permission.rs  read.rs  task.rs  todo.rs  web.rs  web_tools_readme.md  write.rs
crates/code-mesh-core/tests/common/: fixtures.rs  mocks.rs  mod.rs
crates/code-mesh-core/tests/integration/: end_to_end_tests.rs  mod.rs
crates/code-mesh-core/tests/unit/: auth_tests.rs  llm_tests.rs  session_tests.rs  tool_tests.rs
crates/code-mesh-tui/: Cargo.toml  README.md
crates/code-mesh-tui/src/: app.rs  chat.rs  config.rs  diff.rs  events.rs  file_viewer.rs  layout.rs  lib.rs  renderer.rs  status.rs  theme.rs
crates/code-mesh-tui/src/components/: command_palette.rs  dialog.rs  mod.rs  status_bar.rs
crates/code-mesh-tui/src/utils/: mod.rs  syntax_highlighter.rs
crates/code-mesh-wasm/: Cargo.toml  README.md
crates/code-mesh-wasm/src/: auth.rs  browser.rs  http.rs  lib.rs  performance.rs  storage.rs  utils.rs  worker.rs
crates/code-mesh-wasm/tests/: wasm_tests.rs
docs/: book.toml
docs/legacy/: ANTHROPIC_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  CLAUDE_FLOW_INTEGRATION_PROPOSAL.md  IMPLEMENTATION_SUMMARY.md  MANUAL_BRANCH_PROTECTION_SETUP.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  README.md  TESTING.md  TOOL_IMPLEMENTATION_SUMMARY.md  TUI_IMPLEMENTATION.md  WEB_TOOLS_IMPLEMENTATION_REPORT.md  github-update.md  opencode-tools-analysis.md
docs/research/: opencode.md
docs/src/: README.md  SUMMARY.md
docs/src/getting-started/: configuration.md  first-steps.md  installation.md  quick-start.md
docs/src/migration/: from-opencode.md
docs/src/user-guide/: cli-reference.md  multi-agent.md
memory/agents/: README.md
memory/sessions/: README.md
npm/: README.md  jest.browser.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
npm/public/: manifest.json  sw.js
npm/src/: browser.ts  index.ts  wasm-runner.ts
npm/tests/: browser.setup.ts  browser.test.ts  setup.ts  wasm-runner.test.ts  wasm.mock.ts
opencode_cli/: Cargo.toml
opencode_cli/src/: cli.rs  main.rs  utils.rs
opencode_cli/src/commands/: agent.rs  ask.rs  config.rs  memory.rs  mod.rs  provider.rs  session.rs
opencode_cli/src/tui/: app.rs  components.rs  events.rs  mod.rs
opencode_core/: Cargo.toml
opencode_core/src/: agent.rs  config.rs  engine.rs  filesystem.rs  lib.rs  memory.rs  native.rs  session.rs  wasm.rs  wasm_bindings.rs
opencode_core/src/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
opencode_web/: Cargo.toml
opencode_web/src/: app.rs  lib.rs
opencode_web/src/components/: mod.rs
opencode_web/src/pages/: agents.rs  chat.rs  mod.rs
opencode_web/src/services/: mod.rs
opencode_web/src/utils/: mod.rs
scripts/: benchmark.sh
tests/integration/wasm/: wasm_core_tests.rs
tests/security/file_operations/: security_tests.rs
tests/unit/core/: provider_tests.rs
