[package]
name = "code-mesh-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance, WASM-powered distributed swarm intelligence core library for concurrent code execution and neural mesh computing"
homepage = "https://github.com/ruvnet/code-mesh"
repository = "https://github.com/ruvnet/code-mesh"
documentation = "https://docs.rs/code-mesh-core"
readme = "README.md"
keywords = ["wasm", "distributed", "swarm", "neural", "performance"]
categories = ["development-tools", "web-programming", "concurrency", "algorithms", "wasm"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }

# Core specific dependencies
async-trait = "0.1"
indexmap = { version = "2.2", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"
rand = "0.8"
urlencoding = "2.1"
futures-util = "0.3"
pin-project = "1.1"
bytes = "1.6"
hex = "0.4"
toml = { workspace = true }
hostname = "0.3"

# LLM SDK dependencies (optional based on features)
async-openai = { version = "0.23", optional = true }

# Tool system
regex = "1.10"
similar = "2.5"
glob = "0.3"
walkdir = { workspace = true }
which = { workspace = true }
url = { workspace = true }

# Web functionality
html5ever = { version = "0.26", optional = true }
markup5ever_rcdom = { version = "0.2", optional = true }
html2md = { version = "0.2", optional = true }
scraper = { version = "0.18", optional = true }
cookie = { version = "0.18", optional = true }
http = { version = "0.2", optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3.77", optional = true, features = [
    "console",
    "Window",
    "Document",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "AbortController",
    "AbortSignal",
    "FormData",
    "Blob",
    "File",
    "ReadableStream",
    "WritableStream",
    "TextDecoder",
    "TextEncoder",
    "Url",
    "UrlSearchParams",
] }

# Process execution and file operations
notify = "6.1"
tempfile = { workspace = true }
filetime = "0.2"
mime_guess = "2.0"
ignore = "0.4"

# Text processing
aho-corasick = "1.1"
memchr = "2.7"

# Cross-platform support
cfg-if = "1.0"

# Storage
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = ["native", "web"]
native = ["rusqlite", "reqwest/native-tls"]
wasm = ["dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
openai = ["async-openai"]
anthropic = []
mistral = []
web = ["html5ever", "markup5ever_rcdom", "html2md", "scraper", "cookie", "http"]

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
criterion = { workspace = true }
pprof = { workspace = true }
jemallocator = { workspace = true }
memory-stats = { workspace = true }
flame = { workspace = true }
inferno = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

[[bench]]
name = "tool_benchmarks"
harness = false

[[bench]]
name = "llm_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "integration_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false