[package]
name = "code-mesh-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive Terminal User Interface for the Code-Mesh distributed swarm intelligence system"
homepage = "https://github.com/ruvnet/code-mesh"
repository = "https://github.com/ruvnet/code-mesh"
documentation = "https://docs.rs/code-mesh-tui"
readme = "README.md"
keywords = ["tui", "terminal", "swarm", "visualization", "monitoring"]
categories = ["command-line-utilities", "visualization", "development-tools"]

[dependencies]
# Core dependencies
code-mesh-core = { version = "0.1.0", path = "../code-mesh-core" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true

# TUI dependencies
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
tui-input.workspace = true

# Text processing and rendering
syntect.workspace = true
pulldown-cmark.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true

# Color and styling
owo-colors = "4.0"

# Event handling
futures.workspace = true
futures-util.workspace = true

# File and path utilities
dirs.workspace = true
walkdir.workspace = true

# Date/time
chrono.workspace = true

# UUID generation
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true