[package]
name = "code-mesh-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core functionality
code-mesh-core = { path = "../code-mesh-core", default-features = false, features = ["wasm"] }

# WASM specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "AbortController",
    "AbortSignal",
] }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack]
"wasm-pack" = "0.12"